Adicionada contagem do numero de dias

--- a/Scripts/Sequence Mining Scripts/[4] Reading Output and converting.ipynb
+++ b/Scripts/Sequence Mining Scripts/[4] Reading Output and converting.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,21 +54,24 @@
     "ext_patterns = []\n",
     "for p in patterns:\n",
     "    sequence_pattern = \"\"\n",
+    "    transactions_number = 0\n",
     "    last = False\n",
     "    if p[0] == \"1\":\n",
     "        continue\n",
-    "    \n",
+    "        \n",
     "    for t in p:\n",
     "        contagem = 0\n",
     "        if t == '#SUP:':\n",
+    "            transactions_number -=1\n",
     "            last = True\n",
     "            sequence_pattern = sequence_pattern[0:-3]\n",
     "        elif last == True:\n",
     "            contagem = int(t)\n",
-    "            sequence_pattern = sequence_pattern + t + \" \" + str((contagem*1.0)/1212)\n",
+    "            sequence_pattern = sequence_pattern + t + \" #\" + str(transactions_number) + \" \" + str((contagem*1.0)/1212)\n",
     "            hist += [(contagem*1.0)/1212]\n",
     "        else:\n",
     "            if int(t) == -1:\n",
+    "                transactions_number += 1\n",
     "                sequence_pattern = sequence_pattern + \"-> \"\n",
     "            else:\n",
     "                sequence_pattern = sequence_pattern + itens[int(t)][0] + \" \"\n",
@@ -77,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 116,
    "metadata": {
     "collapsed": true
    },
@@ -85,6 +88,29 @@
    "source": [
     "ext_patterns.sort(key = lambda a: a[1],reverse=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "f = open(\"resultados/70_10_legivel.txt\", \"w\")\n",
+    "for p in ext_patterns:\n",
+    "    f.write(p[0]+\"\\n\")\n",
+    "f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -915,29 +941,6 @@
    "source": [
     "plt.plot(hist)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 98,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "\n",
-    "f = open(\"resultados/70_10_legivel.txt\", \"w\")\n",
-    "for p in ext_patterns:\n",
-    "    f.write(p[0]+\"\\n\")\n",
-    "f.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
